--- a/src/main/resources/templates/genre.html
+++ b/src/main/resources/templates/genre.html
@@ -30,16 +30,7 @@
     </nav>
 </header>
 </body>
-<p th:each="genre:${genres}" class="genre">
-    <a th:href="@{'genres/' + ${genre.id}}" th:text=" ''+${genre.name} + ''"></a>
-</p>
-</div>
-<div>
-    <form th:action="'/add-genre'" method="POST">
-        <input name="name" type="text">
-        <button type="submit">Add Genre</button>
-    </form>
-</div>
+<h1 th:text="${genre.name}"></h1>
 <body>
 
 </body>
