--- a/src/main/resources/templates/post-view.html
+++ b/src/main/resources/templates/post-view.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/layout.css">
+
+    <title>Fashion Paradise</title>
+
 </head>
+
+<body class="container">
+<header class="container__header">
+    <div class="header__page-title">
+        <p class="site-header-title">Lifestle and Fashion Blog</p>
+    </div>
+
+    <div class="nav">
+        <a href="/">Home</a>
+        <a href="/posts">Posts</a>
+        <a href="/genres">Genres</a>
+        <a href="/authors">Authors</a>
+        <a href="/hashtags">Hashtags</a>
+
+    </div>
+    </nav>
+</header>
+</body>
 <body>
+<div>
+    <form th:action="'/add-post'" method="POST">
+        <input name="postBody" type="text">
+        <button type="submit">Add Post</button>
+    </form>
+</div>
+<div>
+    <p th:each="post:${posts}" class="post">
+        <a th:href="@{'/' + ${post.title}}" th:text=" ''+${post.title} + ''"></a>
+    </p>
+</div>
 
 </body>
 </html>
