--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -24,23 +24,14 @@
         <a href="/posts">Posts</a>
         <a href="/genres">Genres</a>
         <a href="/authors">Authors</a>
-        <a href="hashtags">Hashtags</a>
+        <a href="/hashtags">Hashtags</a>
 
     </div>
     </nav>
 </header>
 </body>
-<p th:each="genre:${genres}" class="genre">
-    <a th:href="@{'genres/' + ${genre.id}}" th:text=" ''+${genre.name} + ''"></a>
-</p>
-</div>
-<div>
-    <form th:action="'/add-genre'" method="POST">
-        <input name="name" type="text">
-        <button type="submit">Add Genre</button>
-    </form>
-</div>
 <body>
+<h1 th:text="${post.title}"></h1>
 
 </body>
 </html>
