--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <body class="container">
 <header class="container__header">
     <div class="header__page-title">
-        <p class="site-header-title">Lifestle and Fashion Blog</p>
+        <p class="site-header-title">Lifestyle and Fashion Blog</p>
     </div>
 
             <div class="nav">
@@ -31,10 +31,23 @@
 </header>
 
     <div class ="welcome__text">
-    <p>Hello, World! Welcome tomy page, I am Merci but most people either call me Gucci.
-    I was born in Ghana and raised in New Jersey and Atlanta Georgia. I created this blog to share my perpective of life
-    to and also to share latest fashion trends. My aim is to inspire you to feel and look your best regardless of what you
-    may be going through. </p>
+
+        <pre>
+            Hello, World ! Welcome to my blog, I am Merci but most people either call me Gucci. I was born in Ghana but raised in
+
+            New Jersey and went to college in Atlanta Georgia. I created this blog to share with you all the things that I love
+
+            and am passionate about as well as life experiences. I am using my platform to not only become the best version of
+
+            myself but to also encourage my readers to become the best version of themselves through what they love, especially
+
+            my ladies! I am here to inspire and am excited to share my life life wit you all! With all this being said, experience
+
+            this life of intention, love, passion and conquering dreams with me.
+        </pre>
+
+    </div>
+    </div>
     </div>
 
 
