--- a/src/main/resources/templates/authors-view.html
+++ b/src/main/resources/templates/authors-view.html
@@ -16,7 +16,7 @@
 <body class="container">
 <header class="container__header">
     <div class="header__page-title">
-        <p class="site-header-title">Lifestle and Fashion Blog</p>
+        <p class="site-header-title">Lifestyle and Fashion Blog</p>
     </div>
 
     <div class="nav">
