--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     </div>
 
             <div class="nav">
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
                 <a href="posts">Posts</a>
                 <a href="genres">Genres</a>
                 <a href="authors">Authors</a>
