--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -6,32 +6,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="../static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../static/css/layout.css" type="text/css">
 
     <title>Fashion Paradise</title>
 
 </head>
 
 <body class="container">
-<header class="container__header">
-    <div class="header__page-title">
-        <p class="site-header-title">Lifestyle and Fashion Blog</p>
-    </div>
+    <header class="container__header">
+        <div class="header__page-title">
+            <p class="site-header-title">Lifestyle and Fashion Blog</p>
+        </div>
 
-    <div class="nav">
-        <a href="/">Home</a>
-        <a href="/posts">Posts</a>
-        <a href="/genres">Genres</a>
-        <a href="/authors">Authors</a>
-        <a href="/hashtags">Hashtags</a>
+        <div class="nav">
+            <a href="/">Home</a>
+            <a href="/posts">Posts</a>
+            <a href="/genres">Genres</a>
+            <a href="/authors">Authors</a>
+            <a href="/hashtags">Hashtags</a>
 
-    </div>
-    </nav>
-</header>
+        </div>
+    </header>
 </body>
 <body>
-<h1 th:text="${post.title}"></h1>
-
+    <h1 th:text="${post.title}"></h1>
+    <div>
+        <a th:href="@{'/author/' + ${post.author.id}}" th:text="'by ' + ${post.author.name}"></a>
+        <a th:href="@{'/genres/' + ${post.genre.id}}" th:text="'genre: ' + ${post.genre.name}"></a>
+    </div>
+    <div>
+        <p th:text="${post.postBody}"></p>
+    </div>
+<div>
+    <p th:each="hashtag:${post.hashtags}" class="hashtag">
+        <a th:href="@{'/hashtags/' + ${hashtag.id}}" th:text=" '#'+${hashtag.hashtag} + ''"></a>
+    </p>
+</div>
 </body>
 </html>
